--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,6 @@
-DATABASE=mongodb://127.0.0.1:27017/ecommerce
+'DATABASE=mongodb://127.0.0.1:27017/ecommerce'
+DATABASE="mongodb+srv://whyte:pa55w0rd@cluster0.q78gyqn.mongodb.net/"
 PORT=8000
-BRAINTREE_MERCHANT_ID=n74dc2kw9g3ws389
-BRAINTREE_PUBLIC_KEY=bgytmgzhz5f6t2tg
-BRAINTREE_PRIVATE_KEY=e6f226166da99d874f00008f0bba14fe
+BRAINTREE_MERCHANT_ID=9xyq7jnsswn4ydps
+BRAINTREE_PUBLIC_KEY=g4w54vkctg6c53h4
+BRAINTREE_PRIVATE_KEY=ad007f0e2131e9010f8659d1a6b04007
